<resources>
    <string name="app_name">Personal Feed</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>

    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in_text_string">Sign In</string>
    <string name="sign_up_text_string">Sign Up</string>
    <string name="terms_conditions">By tapping the Sign Up, you agree to our <u><font color='#FF5722'>Terms and Conditions</font></u> and <u><font color='#FF5722'>Privacy Statement</font></u>.</string>
    <string name="forgot_password_string">Forgot your Password?</string>
    <string name="first_name_string_text">First Name</string>
    <string name="last_name_string_text">Last Name</string>
    <string name="phone_number_string_text">Phone Number</string>

    <string name="my_account_string">My Account</string>
    <string name="settings_string">Settings</string>
    <string name="logout_string">Logout</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="header_string">Header Navigation</string>

    <string name="main_layout_string">Main Layout</string>
    <string name="top_stories_string"><u>Top Stories</u></string>
    <string name="sports_string"><u>Sports</u></string>
    <string name="sports_string_nav">Sports</string>
    <string name="top_stories_nav">Top Stories</string>
    <string name="movie_review_string">Movies Review</string>
    <string name="books_string">Books</string>
    <string name="best_sellers_string">Best Sellers</string>
    <string name="or_sign_in_with_string">Or sign in with</string>
    <string name="about_menu_string">About</string>
    <string name="search_movie_string">Search Movie</string>
    <string name="cancel_string">Cancel</string>
    <string name="search_string">Search</string>
    <string name="sports_string_title"><u>Sports</u></string>

    //String for Chat Activity
    <string name="chat_send_button">Send</string>
    <string name="chat_sign_out">Sign Out</string>



</resources>
