<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item-->
        <!--android:id="@+id/nav_account"-->
        <!--android:title="@string/my_account_string"-->
        <!--android:icon="@drawable/ic_person_black_24dp"/>-->

    <item
        android:id="@+id/nav_top_stories"
        android:title="@string/top_stories_nav"
        android:icon="@drawable/top_games_star"/>

    <item
        android:id="@+id/nav_movie_reviews"
        android:title="@string/movie_review_string"
        android:icon="@drawable/ic_local_movies_black_24dp"/>
    <!--<item-->
        <!--android:id="@+id/nav_books"-->
        <!--android:title="@string/books_string"-->
        <!--android:icon="@drawable/ic_collections_bookmark_black_24dp"/>-->

    <!--<item-->
        <!--android:id="@+id/nav_settings"-->
        <!--android:title="@string/settings_string"-->
        <!--android:icon="@drawable/ic_settings_black_24dp"/>-->
    <item
        android:id="@+id/nav_sports"
        android:title="@string/sports_string_nav"
        android:icon="@drawable/soccer_ball_variant"/>

    <item
        android:id="@+id/nav_chat"
        android:title="MessageBox"
        android:icon="@drawable/nav_chat_smile"
        />


    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout_string"
        android:icon="@drawable/ic_exit_to_app_black_24dp"/>

</menu>