<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:elevation="8dp"
        android:background="@color/colorIcons"
        android:theme="@style/CustomLoginToolBarTheme"
        android:layout_marginBottom="5dp">
    </android.support.v7.widget.Toolbar>



       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:padding="16dp">


               <android.support.design.widget.TextInputLayout
                   android:id="@+id/text_input_first_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:errorEnabled="true"
                   android:focusableInTouchMode="true"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:hint="@string/first_name_string_text">

                   <android.support.design.widget.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textPersonName" />

               </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:id="@+id/text_input_last_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:errorEnabled="true"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <android.support.design.widget.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/last_name_string_text"
                       android:inputType="textPersonName" />

               </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:id="@+id/text_input_email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:errorEnabled="true"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <android.support.design.widget.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/prompt_email"
                       android:inputType="textEmailAddress" />

               </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:id="@+id/text_input_phone"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:errorEnabled="true"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <android.support.design.widget.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/phone_number_string_text"
                       android:inputType="number" />

               </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:id="@+id/text_input_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:errorEnabled="true"
                   app:passwordToggleEnabled="true"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <android.support.design.widget.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/prompt_password"
                       android:inputType="textPassword" />

               </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:id="@+id/text_input_password_confirm"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:errorEnabled="true"
                   app:passwordToggleEnabled="true"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <android.support.design.widget.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/prompt_password_confirm"
                       android:inputType="textPassword" />

               </android.support.design.widget.TextInputLayout>


               <android.support.design.button.MaterialButton
                   android:id="@+id/login_button"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="7dp"
                   android:onClick="signUp"
                   android:text="@string/sign_up_text_string" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical|center_horizontal"
                   android:gravity="center"
                   android:text="@string/terms_conditions"
                   android:textSize="10sp" />

           </LinearLayout>


       </ScrollView>


</LinearLayout>